argocd/kustomized/keycloak/oauth2-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: keycloak
spec:
  forwardAuth:
    address: "https://oauth2.yuriivasylchuk.org.ua/oauth2/auth"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Email
      - X-Auth-Request-User
