argocd/kustomized/keycloak/oauth2-proxy-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: keycloak
spec:
  forwardAuth:
    address: "https://auth.yuriivasylchuk.org.ua/"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
