argocd/kustomized/keycloak/authelia-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.yuriivasylchuk.org.ua`)
      kind: Rule
      services:
        - name: authelia
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt
