argocd/kustomized/keycloak/keycloak-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingressroute
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.vasylchuk.org.ua`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
