argocd/kustomized/keycloak/oauth2-proxy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`auth.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: auth-headers
          namespace: keycloak
      services:
        - name: oauth2-proxy
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt
